--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-{{users$ | async | json}}
-
-<br>
-<br>
-<button (click)="addUser()">ADD USER</button>
-<br>
-<br>
-<button (click)="subscribeDirectlyToHttp()">TEST: 3x bezpośredni HTTP</button>
+<router-outlet></router-outlet>
