--- a/src/app/examples/good-fetch-and-forms/good-fetch-and-forms.component.html
+++ b/src/app/examples/good-fetch-and-forms/good-fetch-and-forms.component.html
@@ -1,4 +1,27 @@
-{{users$ | async | json}}
+<ng-container *ngIf="!loading$; else loadingSpinner">
+  <ng-container *ngIf="!loginError$; else errorState">
+    <ng-container *ngIf="users$ | async as users">
+      <ng-container *ngIf="users.length > 0; else emptyState">
+
+          <p-table [value]="users" [tableStyle]="{ 'min-width': '50rem' }">
+            <ng-template #header>
+              <tr>
+                <th>Name</th>
+                <th>Role</th>
+              </tr>
+            </ng-template>
+            <ng-template #body let-user>
+              <tr>
+                <td>{{ user.name }}</td>
+                <td>{{ user.role }}</td>
+              </tr>
+            </ng-template>
+          </p-table>
+
+      </ng-container>
+    </ng-container>
+  </ng-container>
+</ng-container>
 
 <form [formGroup]="addUserForm" (ngSubmit)="onSubmit()">
   <input type="text" formControlName="name" placeholder="Name" />
@@ -9,3 +32,30 @@
     {{ (loading$ | async) ? 'dodaje...' : 'dodaj urzytkownika' }}
   </button>
 </form>
+
+<!--emptyState-->
+<ng-template #emptyState>
+  <div class="flex justify-content-center align-items-center mt-8">
+    <div class="text-center">
+      <img src="assets/images/empty-state.png" alt="Empty State Icon" class="empty-state-icon"/>
+      <h4 [ngStyle]="{color:'var(--bluegray-700)'}">Brak wyników wyszukiwania.</h4>
+    </div>
+  </div>
+</ng-template>
+
+<!--errorState-->
+<ng-template #errorState>
+  <div class="flex justify-content-center align-items-center mt-8">
+    <div class="text-center">
+      <img src="assets/images/error-state.png" alt="Empty State Icon" class="empty-state-icon"/>
+      <h4 [ngStyle]="{color:'var(--bluegray-700)'}">Błąd pobierania dancyh :(</h4>
+    </div>
+  </div>
+</ng-template>
+
+<!--loadingSpinner-->
+<ng-template #loadingSpinner>
+  <div class="mb-6 justify-content-center align-content-center" style="width: 50px;">
+    <p-progressSpinner [ngStyle]="{color:'#00205b'}" ariaLabel="loading"/>
+  </div>
+</ng-template>
