--- a/src/app/examples/good-fetch-and-forms/good-fetch-and-forms.component.html
+++ b/src/app/examples/good-fetch-and-forms/good-fetch-and-forms.component.html
@@ -1,37 +1,40 @@
-<ng-container *ngIf="!loading$; else loadingSpinner">
-  <ng-container *ngIf="!loginError$; else errorState">
-    <ng-container *ngIf="users$ | async as users">
-      <ng-container *ngIf="users.length > 0; else emptyState">
-
-          <p-table [value]="users" [tableStyle]="{ 'min-width': '50rem' }">
-            <ng-template #header>
-              <tr>
-                <th>Name</th>
-                <th>Role</th>
-              </tr>
-            </ng-template>
-            <ng-template #body let-user>
-              <tr>
-                <td>{{ user.name }}</td>
-                <td>{{ user.role }}</td>
-              </tr>
-            </ng-template>
-          </p-table>
-
-      </ng-container>
-    </ng-container>
-  </ng-container>
-</ng-container>
-
 <form [formGroup]="addUserForm" (ngSubmit)="onSubmit()">
   <input type="text" formControlName="name" placeholder="Name" />
-  <input type="text" formControlName="role" placeholder="role" />
+  <input type="text" formControlName="surName" placeholder="Surname" />
   <button type="submit"
           [disabled]="addUserForm.invalid || (loading$ | async)"
   >
     {{ (loading$ | async) ? 'dodaje...' : 'dodaj urzytkownika' }}
   </button>
 </form>
+
+<ng-container *ngIf="!(loading$ | async); else loadingSpinner">
+  <ng-container *ngIf="!(loginError$ | async); else errorState">
+    <ng-container *ngIf="(users$ | async) as users">
+
+
+      <ng-container *ngIf="users.length > 0; else emptyState">
+          <p-table [value]="users" [tableStyle]="{ 'min-width': '50rem' }">
+            <ng-template #header>
+              <tr>
+                <th>Name</th>
+                <th>Surname</th>
+              </tr>
+            </ng-template>
+            <ng-template #body let-user>
+              <tr>
+                <td>{{ user.name }}</td>
+                <td>{{ user.surName }}</td>
+              </tr>
+            </ng-template>
+          </p-table>
+      </ng-container>
+
+
+    </ng-container>
+  </ng-container>
+</ng-container>
+
 
 <!--emptyState-->
 <ng-template #emptyState>
